Revise index.html with new content and styles
Updated the HTML structure and added styles.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta charset="UTF-8">
     <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <p>This site is hosted 100% free on GitHub Pages.</p>
-  </body>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 700px;
+            margin: 50px auto;
+            line-height: 1.6;
+        }
+        h1 { color: #333; }
+        .box {
+            background: #f2f2f2;
+            padding: 20px;
+            border-radius: 8px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My Site</h1>
+    <div class="box">
+        <p>This website is hosted for free using GitHub Pages.</p>
+        <p>Edit this text to customize your page.</p>
+    </div>
+</body>
 </html>
