--- a/index.html
+++ b/index.html
@@ -1,28 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My GitHub Pages Site</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 700px;
-            margin: 50px auto;
-            line-height: 1.6;
-        }
-        h1 { color: #333; }
-        .box {
-            background: #f2f2f2;
-            padding: 20px;
-            border-radius: 8px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Our Special Day</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: 'Georgia', serif;
+        background: #f7f0e9;
+        color: #4a3c32;
+    }
+
+    .hero {
+        background: #f7f0e9;
+        text-align: center;
+        padding: 100px 20px;
+    }
+
+    .hero h1 {
+        font-size: 50px;
+        margin: 0;
+        font-weight: bold;
+    }
+
+    .hero h2 {
+        font-size: 36px;
+        margin: 10px 0;
+        font-weight: bold;
+    }
+
+    .hero p {
+        max-width: 600px;
+        margin: 20px auto;
+        line-height: 1.6;
+        font-size: 18px;
+    }
+
+    .button {
+        background: #7d6b5a;
+        color: white;
+        padding: 12px 28px;
+        border-radius: 4px;
+        text-decoration: none;
+        font-size: 16px;
+        display: inline-block;
+        margin-top: 20px;
+    }
+
+    /* Two-column section */
+    .section {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 80px 20px;
+        background: #f4d7cf;
+    }
+
+    .text-block {
+        flex: 1;
+        padding: 20px;
+        min-width: 300px;
+        max-width: 600px;
+    }
+
+    .text-block h3 {
+        font-size: 32px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    .text-block h4 {
+        margin-top: 0;
+        font-size: 20px;
+        font-weight: normal;
+    }
+
+    .text-block p {
+        line-height: 1.7;
+        font-size: 17px;
+        max-width: 500px;
+    }
+
+    .photo-block {
+        flex: 1;
+        padding: 20px;
+        text-align: center;
+        min-width: 300px;
+    }
+
+    .photo-block img {
+        width: 90%;
+        max-width: 350px;
+        border-radius: 6px;
+        object-fit: cover;
+    }
+</style>
 </head>
+
 <body>
-    <h1>Welcome to My Site</h1>
-    <div class="box">
-        <p>This website is hosted for free using GitHub Pages.</p>
-        <p>Edit this text to customize your page.</p>
+
+<!-- HERO SECTION -->
+<section class="hero">
+    <h1>27.06.2026</h1>
+    <h2>Our Special Day</h2>
+    <p>
+        Join us for our wedding celebration as we unite in love! Mark your calendars
+        for a day filled with joy, laughter, and cherished memories. We can’t wait to
+        celebrate this beautiful moment with you!
+    </p>
+    <a class="button" href="#">Register Now</a>
+</section>
+
+<!-- LOVE STORY SECTION -->
+<section class="section">
+    <div class="text-block">
+        <h3>Our Love Story</h3>
+        <h4>Meet the Couple</h4>
+        <p>
+            Join us on our journey as we embark on a lifetime of love and
+            happiness. From our first date to this moment, our hearts have
+            intertwined to create a beautiful story filled with laughter, joy,
+            and endless love. We are excited to share our special day with
+            you and create unforgettable memories together. Let’s celebrate
+            love, laughter, and happily ever after.
+        </p>
     </div>
+
+    <div class="photo-block">
+        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Couple Photo">
+    </div>
+</section>
+
 </body>
 </html>
