--- a/index.html
+++ b/index.html
@@ -3,253 +3,141 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Our Beach Wedding</title>
+<title>Our Special Day 27.06.2026 — Hristo and Sara</title>
 
-<style>
-    body {
-        margin: 0;
-        font-family: 'Georgia', serif;
-        background: #f7f2e8;
-        color: #3a2f28;
-    }
-
-    /* HERO BEACH SECTION */
-    .hero {
-        background: linear-gradient(to bottom, #dff7f2, #f7f2e8);
-        text-align: center;
-        padding: 120px 20px;
-        background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
-        background-size: cover;
-        background-position: center;
-        color: white;
-        text-shadow: 0 2px 4px rgba(0,0,0,0.4);
-    }
-
-    .hero h1 {
-        font-size: 48px;
-        margin: 0;
-        font-weight: bold;
-    }
-
-    .hero h2 {
-        font-size: 28px;
-        margin: 10px 0 25px;
-    }
-
-    .button {
-        background: #7b5e4a;
-        color: white;
-        padding: 12px 30px;
-        border-radius: 6px;
-        text-decoration: none;
-        font-size: 18px;
-    }
-
-    /* ROTATING PHOTOS */
-    .slideshow {
-        max-width: 700px;
-        margin: 60px auto;
-        position: relative;
-    }
-    .slideshow img {
-        width: 100%;
-        border-radius: 12px;
-        opacity: 0;
-        position: absolute;
-        transition: opacity 1.5s ease-in-out;
-    }
-    .slideshow img.active {
-        opacity: 1;
-    }
-
-    /* SECTION STYLING */
-    .section {
-        padding: 80px 20px;
-        text-align: center;
-        background: #ffffff;
-    }
-
-    .section h3 {
-        font-size: 32px;
-        margin-bottom: 10px;
-        color: #7b5e4a;
-    }
-
-    /* BEST MAN + BRIDESMAID */
-    .people {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 40px;
-        margin-top: 40px;
-    }
-
-    .person {
-        width: 220px;
-        padding: 20px;
-        background: #f7f2e8;
-        border-radius: 12px;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-
-    .person img {
-        width: 100%;
-        border-radius: 10px;
-    }
-
-    .person h4 {
-        margin-top: 15px;
-    }
-
-    /* RSVP FORM */
-    .form-section {
-        padding: 80px 20px;
-        background: #dff7f2;
-    }
-
-    form {
-        max-width: 500px;
-        margin: auto;
-        background: white;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-    }
-
-    input, select {
-        width: 100%;
-        padding: 12px;
-        margin: 10px 0 20px;
-        border-radius: 6px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-    }
-
-    button {
-        width: 100%;
-        padding: 14px;
-        font-size: 18px;
-        background: #64b5f6;
-        color: white;
-        border: none;
-        border-radius: 6px;
-    }
-
-    .confirmation {
-        margin-top: 20px;
-        color: green;
-        text-align: center;
-        font-weight: bold;
-    }
-</style>
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
-<!-- HERO SECTION -->
-<section class="hero">
-    <h1>Sozopol • 27.06</h1>
-    <h2>Beach Bar Santa Marina</h2>
-    <a class="button" href="#rsvp">RSVP Now</a>
-</section>
+<!-- AUDIO -->
+<audio id="bgMusic" autoplay loop>
+    <source src="assets/music/acoustic.mp3" type="audio/mp3">
+</audio>
+<button id="playButton">▶ Play Music</button>
 
-<!-- LOVE STORY WITH ROTATION -->
+<!-- HERO SECTION -->
+<header class="hero">
+    <div class="hero-content">
+        <h1>Bound by Love, Blessed by the Sea</h1>
+        <h2>Hristo & Sara</h2>
+        <h3>Sozopol • 27 June 2026 • Beach Bar Santa Marina</h3>
+        <a href="#rsvp" class="btn-light">RSVP</a>
+    </div>
+</header>
+
+<!-- LOVE STORY -->
 <section class="section">
-    <h3>Our Love Story</h3>
-    <p>We can't wait to share this beautiful moment with you on the beach.</p>
+    <h2 class="section-title">Our Love Story</h2>
 
     <div class="slideshow">
-        <!-- Replace these with your real photos -->
-        <img src="https://via.placeholder.com/800x500?text=Photo+1" class="active">
-        <img src="https://via.placeholder.com/800x500?text=Photo+2">
-        <img src="https://via.placeholder.com/800x500?text=Photo+3">
+        <img src="assets/images/slideshow/slide1.jpg" class="active">
+        <img src="assets/images/slideshow/slide2.jpg">
+        <img src="assets/images/slideshow/slide3.jpg">
     </div>
+
+    <p class="section-text">
+        Your story text goes here. Replace this paragraph with your own beautiful love story.
+    </p>
 </section>
 
 <!-- WEDDING PARTY -->
 <section class="section">
-    <h3>Wedding Party</h3>
+    <h2 class="section-title">Wedding Party</h2>
 
-    <div class="people">
-        <div class="person">
-            <img src="https://via.placeholder.com/300x300?text=Best+Man">
-            <h4>Best Man</h4>
+    <div class="party-grid">
+        <div class="party-card">
+            <img src="assets/images/gallery/placeholder1.jpg">
+            <h3>Best Man</h3>
         </div>
 
-        <div class="person">
-            <img src="https://via.placeholder.com/300x300?text=Bridesmaid">
-            <h4>Bridesmaid</h4>
+        <div class="party-card">
+            <img src="assets/images/gallery/placeholder2.jpg">
+            <h3>Bridesmaid</h3>
         </div>
     </div>
 </section>
 
-<!-- RSVP FORM -->
-<section class="form-section" id="rsvp">
-    <h3 style="text-align:center;">RSVP</h3>
+<!-- GALLERY -->
+<section class="section">
+    <h2 class="section-title">Gallery</h2>
 
-    <form id="rsvpForm">
-        <label>Name</label>
-        <input type="text" id="name" required>
+    <div class="gallery-grid">
+        <img src="assets/images/gallery/placeholder1.jpg">
+        <img src="assets/images/gallery/placeholder2.jpg">
+        <img src="assets/images/gallery/placeholder3.jpg">
+    </div>
 
-        <label>Bringing +1?</label>
-        <select id="plusOne">
-            <option value="No">No</option>
+    <p class="gallery-note">Add your photos into <b>assets/images/gallery/</b></p>
+</section>
+
+<!-- TIMELINE -->
+<section class="section">
+    <h2 class="section-title">Wedding Timeline</h2>
+
+    <div class="timeline">
+        <div class="timeline-item">
+            <img src="assets/images/timeline/time1.jpg">
+            <h3>Ceremony</h3>
+            <p>Add time + details here.</p>
+        </div>
+
+        <div class="timeline-item">
+            <img src="assets/images/timeline/time2.jpg">
+            <h3>Dinner</h3>
+            <p>Add time + details here.</p>
+        </div>
+
+        <div class="timeline-item">
+            <img src="assets/images/timeline/time3.jpg">
+            <h3>Party</h3>
+            <p>Add time + details here.</p>
+        </div>
+    </div>
+
+    <p class="gallery-note">Replace timeline images inside <b>assets/images/timeline/</b></p>
+</section>
+
+<!-- RSVP -->
+<section class="section rsvp-section" id="rsvp">
+    <h2 class="section-title">RSVP</h2>
+
+    <form id="rsvpForm" method="POST">
+        <input type="text" id="name" name="entry.45681910" placeholder="Your Name" required>
+
+        <select id="plusOne" name="entry.45734887" required>
+            <option value="">Bringing +1?</option>
             <option value="Yes">Yes</option>
+            <option value="No">No</option>
         </select>
 
-        <label>Children attending</label>
-        <select id="children">
+        <select id="children" name="entry.45662509" required>
+            <option value="">Children attending?</option>
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3+">3+</option>
         </select>
 
-        <label>Menu Choice</label>
-        <select id="menu">
+        <select id="menu" name="entry.45734741" required>
+            <option value="">Select Menu</option>
             <option value="Menu 1">Menu 1</option>
             <option value="Menu 2">Menu 2</option>
         </select>
 
-        <button type="submit">Confirm Attendance</button>
+        <button type="submit" class="btn-dark">Confirm Attendance</button>
 
-        <div class="confirmation" id="confirmationMessage" style="display:none;">
-            Thank you! Your response is saved.
-        </div>
+        <p id="confirmationMessage" class="confirmation">Thank you! Your RSVP has been submitted.</p>
     </form>
 </section>
 
-<script>
-/* Photo Rotation */
-let slideIndex = 0;
-const slides = document.querySelectorAll('.slideshow img');
+<!-- WAVES FOOTER -->
+<footer>
+    <div class="waves"></div>
+    <p class="footer-text">Hristo & Sara — 27 June 2026 • Sozopol</p>
+</footer>
 
-setInterval(() => {
-    slides[slideIndex].classList.remove('active');
-    slideIndex = (slideIndex + 1) % slides.length;
-    slides[slideIndex].classList.add('active');
-}, 3000);
-
-/* RSVP Save Locally */
-document.getElementById('rsvpForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    const entry = {
-        name: document.getElementById('name').value,
-        plusOne: document.getElementById('plusOne').value,
-        children: document.getElementById('children').value,
-        menu: document.getElementById('menu').value
-    };
-
-    let saved = JSON.parse(localStorage.getItem('rsvpData') || "[]");
-    saved.push(entry);
-
-    localStorage.setItem('rsvpData', JSON.stringify(saved));
-
-    document.getElementById('confirmationMessage').style.display = 'block';
-    this.reset();
-});
-</script>
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
