--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
 
+<!-- 🌹 FULL PAGE FRAME + PETALS -->
+<div id="page-frame"></div>
+<div id="petal-container"></div>
+
 <!-- LANGUAGE SWITCHER -->
 <div id="lang-switcher">
     <button data-lang="en">EN</button>
@@ -68,43 +72,31 @@
 <section class="section rsvp-section animate-up" id="rsvp">
     <h2 class="section-title" data-i18n="rsvp">RSVP</h2>
 
-    <!-- ✅ FIXED WORKING GOOGLE FORMS VERSION -->
     <form id="rsvpForm" method="POST"
           action="https://docs.google.com/forms/d/e/1FAIpQLSet2BgkiXZTPyLeDv6WjHlRDuEQlESiwHIpGWlthdYjEMu52Q/formResponse"
           target="hidden_iframe">
 
-        <!-- NAME -->
-        <input type="text"
-               name="entry.544791502"
-               placeholder="Your Name"
-               data-i18n-placeholder="your_name"
-               required>
+        <input type="text" name="entry.544791502" placeholder="Your Name"
+               data-i18n-placeholder="your_name" required>
 
-        <!-- PLUS ONE -->
         <select name="entry.902846486" id="plusOneSelect" required>
             <option value="" data-i18n="bringing_plus1">Bringing +1?</option>
             <option value="Yes" data-i18n="yes">Yes</option>
             <option value="No" data-i18n="no">No</option>
         </select>
 
-        <!-- NAME OF +1 -->
-        <input type="text"
-               id="plusOneName"
-               name="entry.2062443015"
-               placeholder="Name of +1"
-               style="display:none;">
+        <input type="text" id="plusOneName" name="entry.2062443015"
+               placeholder="Name of +1" style="display:none;">
 
-        <!-- MAIN MENU -->
         <div class="menu-wrapper">
             <select name="entry.1401677313" id="menuMain" required>
                 <option value="">Select Menu</option>
-                <option value="Menu 1">Menu 1</option>
-                <option value="Menu 2">Menu 2</option>
+                <option value="Menu 1" data-tooltip="Seafood main course, fresh salad, dessert, white wine.">Menu 1</option>
+                <option value="Menu 2" data-tooltip="Beef main course, potatoes, dessert, red wine.">Menu 2</option>
             </select>
             <span class="tooltip"></span>
         </div>
 
-        <!-- CHILDREN -->
         <select name="entry.925384775" required>
             <option value="">Children attending?</option>
             <option value="0">0</option>
@@ -112,12 +104,11 @@
             <option value="+ 2">2</option>
         </select>
 
-        <!-- MENU FOR +1 -->
         <div class="menu-wrapper" id="plusOneMenuWrapper" style="display:none;">
             <select id="plusOneMenu" name="entry.1204705007">
                 <option value="">Menu for +1</option>
-                <option value="Menu 1">Menu 1</option>
-                <option value="Menu 2">Menu 2</option>
+                <option value="Menu 1" data-tooltip="Seafood meal, salad, dessert, white wine.">Menu 1</option>
+                <option value="Menu 2" data-tooltip="Beef main dish, potatoes, dessert, red wine.">Menu 2</option>
             </select>
             <span class="tooltip"></span>
         </div>
