--- a/index.html
+++ b/index.html
@@ -32,15 +32,27 @@
 </audio>
 
 <!-- COUNTDOWN -->
-<section id="countdown" class="countdown-section">
-    <h2 data-i18n="countdown_title">Countdown to Our Wedding</h2>
-    <div id="countdown-timer">
-        <div><span id="days">0</span><p data-i18n="days">Days</p></div>
-        <div><span id="hours">0</span><p data-i18n="hours">Hours</p></div>
-        <div><span id="minutes">0</span><p data-i18n="minutes">Minutes</p></div>
-        <div><span id="seconds">0</span><p data-i18n="seconds">Seconds</p></div>
+<section id="countdown" class="countdown-elegant">
+    <div class="countdown-frame">
+        <div class="time-block">
+            <div class="flower-number"><span id="days">0</span></div>
+            <p data-i18n="days">Days</p>
+        </div>
+        <div class="time-block">
+            <div class="flower-number"><span id="hours">0</span></div>
+            <p data-i18n="hours">Hours</p>
+        </div>
+        <div class="time-block">
+            <div class="flower-number"><span id="minutes">0</span></div>
+            <p data-i18n="minutes">Minutes</p>
+        </div>
+        <div class="time-block">
+            <div class="flower-number"><span id="seconds">0</span></div>
+            <p data-i18n="seconds">Seconds</p>
+        </div>
     </div>
 </section>
+
 
 <!-- HERO -->
 <header class="hero animate-fade">
